syntax = "proto3";

package services;


service CreateBucket {
  rpc CreateBucket (Request) returns (Response);
}

message Request {
  string bucketName = 1;
  string userId = 2;
}

message Response {
  uint32 statusCode = 1;
}